[package]
name = "clusterization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
lazy_static = "1.4.0"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris", "winequality"] }
linfa-nn = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
pathfinding = "4.9.1"
plotly = {version = "0.8.4", features = ["kaleido", "plotly_ndarray"]}
rand = "0.8.5"
